reset with fork of argus